--- a/css/index_main.css
+++ b/css/index_main.css
@@ -62,14 +62,14 @@ button {
 .head-btn-box {
     /*background-color: blue;*/
     float: left;
-    margin: 18px 5px;
+    margin: 30px 5px 0;
     width: 30px;
     /*height: 30px;*/
 }
 
-.head-btn-box:hover .head-btn-up {
+/*.head-btn-box:hover .head-btn-up {
     opacity: 1;
-}
+}*/
 
 .head-btn {
     display: block;
@@ -89,7 +89,7 @@ button {
     position: absolute;
 }
 
-.head-btn-up {
+/*.head-btn-up {
     border-bottom: 10px solid rgb(210, 210, 210);
     margin-bottom: 5px;
     opacity: 0;
@@ -99,7 +99,7 @@ button {
     border-bottom: 8px solid rgb(255, 255, 250);
     top: 4px;
     left: -8px;
-}
+}*/
 
 .head-btn-down {
     border-top: 10px solid rgb(210, 210, 210);
@@ -114,10 +114,11 @@ button {
 .head-text-box {
     /*background-color: yellow;*/
     float: left;
-    padding: 18px 10px;
+    padding: 18px 30px 18px 10px;
     width: calc(100% - 40px);
     font-style: italic;
     color: rgb(210, 210, 210);
+    outline: none;
 }
 
 
