--- a/css/index_main.css
+++ b/css/index_main.css
@@ -36,7 +36,7 @@ button {
 .section-box {
     margin: 30px auto 50px;
     width: 50%;
-    min-width: 300px;
+    min-width: 320px;
     max-width: 600px;
 }
 
@@ -47,7 +47,7 @@ button {
     line-height: 1.25;
     color: rgb(100, 100, 100);
     background-color: rgb(255, 255, 255);
-    box-shadow: 0 0 2px rgb(190, 190, 190), 0 0 70px rgb(220, 220, 220);
+    box-shadow: 0 0 2px rgb(180, 180, 180), 0 0 70px rgb(220, 220, 220);
     letter-spacing: -.5px;
 }
 
@@ -66,12 +66,20 @@ button {
     width: 30px;
     /*height: 30px;*/
 }
-
+.head-btn-box-hiden {
+  visibility: hidden;
+  opacity: 0;
+}
+[contenteditable=true]:empty:before{
+  content: attr(placeholder);
+  display: block; /* For Firefox */
+}
 /*.head-btn-box:hover .head-btn-up {
     opacity: 1;
 }*/
 
 .head-btn {
+    /*background-color: red;*/
     display: block;
     margin: 0 auto;
     width: 0;
@@ -88,18 +96,6 @@ button {
     border-right: 8px solid transparent;
     position: absolute;
 }
-
-/*.head-btn-up {
-    border-bottom: 10px solid rgb(210, 210, 210);
-    margin-bottom: 5px;
-    opacity: 0;
-}
-
-.head-btn-up:after {
-    border-bottom: 8px solid rgb(255, 255, 250);
-    top: 4px;
-    left: -8px;
-}*/
 
 .head-btn-down {
     border-top: 10px solid rgb(210, 210, 210);
@@ -120,7 +116,10 @@ button {
     color: rgb(210, 210, 210);
     outline: none;
 }
-
+.head-text-box:after {
+  content: attr(data-after);
+  /*"What needs to be done?";*/
+}
 
 /*Galva beigas*/
 
@@ -140,7 +139,7 @@ button {
     margin: 12px 5px;
     width: 30px;
     height: 30px;
-    border: 1px solid rgb(190, 190, 190);
+    border: 1px solid rgb(180, 180, 180);
     border-radius: 50%;
     position: relative;
 }
@@ -159,7 +158,7 @@ button {
 
 .task-cbx:checked~.task-edit-box {
     text-decoration: line-through;
-    color: rgb(190, 190, 190);
+    color: rgb(180, 180, 180);
 }
 
 .task-cbx-lbl:hover {
@@ -218,6 +217,7 @@ button {
     width: 27%;
     padding: 10px 0 10px 10px;
     font-size: 14px;
+    vertical-align: top;
 }
 
 .foot-select-btn-box {
@@ -226,11 +226,12 @@ button {
     width: 46%;
     text-align: center;
     font-size: 14px;
+      vertical-align: top;
 }
 
 .foot-select-btn {
     margin: 5px 2px;
-    padding: 2px 8px;
+    padding: 2px 6px;
     border: 1px solid transparent;
     border-radius: 3px;
 }
@@ -240,12 +241,13 @@ button {
     transition: border-color .5s;
 }
 
-.foot-notice-text {
+.foot-clear-box {
     display: inline-block;
     width: 27%;
-    padding: 10px 10px 10px 0;
+    padding: 0px 5px;
     text-align: right;
     font-size: 14px;
+    vertical-align: top;
 }
 
 /*Apakša beigas*/
@@ -254,7 +256,7 @@ button {
     display: block;
     height: 4px;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0 0 2px rgb(190, 190, 190);
+    box-shadow: 0 0 2px rgb(180, 180, 180);
     margin: 2px auto 0;
 }
 
